# WaffleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.py  build.sh  main.c
assets/shaders/: default.frag  default.vert  entity.frag
assets/textures/: armaan.json
dependencies/: nuklear.h  nuklear_glfw_gl3.h
dependencies/glad/: CMakeLists.txt
include/: assetpool.h  camera.h  component.h  external.h  framebuffer.h  gameobject.h  listener.h  renderer.h  scene.h  shader.h  shaderpool.h  sprite.h  spritepool.h  spriterenderer.h  texture.h  texturepool.h  title.h  transform.h  transformpool.h  window.h
include/command/: command.h  commands.h  console.h  deleteentity.h  deletethisentity.h  movecamera.h  print.h
include/commands/: print.h
include/components/: cameracontroller.h  components.h  rigidbody.h  spriterenderer.h
include/core/: entity.h  event.h  gameobject.h  listener.h  scene.h  window.h
include/event/: click.h  command.h  event.h  events.h  mousebutton.h  trigger.h
include/geometry/: geometry.h  shape.h
include/graphics/primitives/: font.h
include/graphics/renderer/: renderable.h  renderer.h  textrenderer.h
include/physics/: bodytype.h  physics.h  physicssystem.h
include/physics/collision/: collision.h  collisionmanifold.h
include/physics/forces/: forcegenerator.h  forceregistration.h  forceregistry.h  gravity.h
include/physics/primitives/: box.h  circle.h  collider.h  colliders.h  line.h  primitives.h  ray.h  raycastresult.h  rigidbody.h
include/physics/raycast/: raycast.h
include/physics2d/: physicssystem2d.h
include/physics2d/forces/: forcegenerator.h  forceregistration.h  forceregistry.h  gravity2d.h
include/physics2d/primitives/: aabb2d.h  box2d.h  circle.h  collider2d.h  line2d.h  primitives.h  ray2d.h
include/physics2d/rigidbody/: collision.h  intersection.h  rigidbody2d.h
include/renderer/: camera.h  debugdraw.h  font.h  framebuffer.h  renderer.h  shader.h  sprite.h  spriterenderer.h  spritesheet.h  texture.h
include/scenes/: title.h
include/util/: assetpool.h  list.h  shaderpool.h  spritesheet.h  texturepool.h  util.h  wio.h  wmath.h
saves/: title.scene
src/: assetpool.c  camera.c  component.c  framebuffer.c  gameobject.c  listener.c  main.c  renderer.c  scene.c  shader.c  shaderpool.c  sprite.c  spritepool.c  spriterenderer.c  texture.c  texturepool.c  title.c  transform.c  transformpool.c  window.c
src/command/: command.c  console.c  deleteentity.c  deletethisentity.c  movecamera.c
src/commands/: print.c
src/components/: cameracontroller.c  rigidbody.c  spriterenderer.c
src/core/: component.c  entity.c  event.c  gameobject.c  listener.c  scene.c  window.c
src/event/: click.c  command.c  event.c  mousebutton.c  trigger.c
src/events/: click.c
src/geometry/: geometry.c
src/graphics/primitives/: font.c  framebuffer.c  shader.c  texture.c
src/graphics/renderer/: renderable.c  renderer.c  spriterenderer.c  textrenderer.c
src/physics/: physics.c  physicssystem.c
src/physics/collision/: collision.c  collisionmanifold.c
src/physics/forces/: forcegenerator.c  forceregistration.c  forceregistry.c  gravity.c
src/physics/primitives/: box.c  circle.c  collider.c  line.c  ray.c  rigidbody.c
src/physics/raycast/: raycast.c  raycastresult.c
src/physics2d/: physicssystem2d.c
src/physics2d/forces/: forcegenerator.c  forceregistration.c  forceregistry.c  gravity2d.c
src/physics2d/primitives/: aabb2d.c  box2d.c  circle.c  collider2d.c  line2d.c  ray2d.c
src/physics2d/rigidbody/: collision.c  collisionmanifold.c  intersection.c  rigidbody2d.c
src/renderer/: camera.c  debugdraw.c  font.c  framebuffer.c  renderer.c  shader.c  sprite.c  spriterenderer.c  spritesheet.c  texture.c
src/scenes/: title.c
src/util/: assetpool.c  list.c  shaderpool.c  spritepool.c  spritesheet.c  texturepool.c  transformpool.c  util.c  wio.c  wmath.c
